--- a/Basics.html
+++ b/Basics.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <header>
+<html lang= "en-US">
+  <head>
     <title>Basic HTML</title>
-  </header>
+  </head>
+    <body style="background-color: powderblue; font-family: courier;">
+        <h1 style="color: red;font-family: verdana;font-size: 300%;text-align: center">First Heading</h1>
+        <h2 style="color: blue;font-size: 160%">2nd Heading</h2>
+        <br>
+        <h3>3rd Heading</h3>
+        <p title="I am a tool tip"> First Paragraph </p>
+        <h4>
+            Poem
+        </h4>
+        <p>
+            <pre>
+                <b>Twinkle twinkle little star</b>
+
+                <strong>how I wonder what you are</strong>
+
+                <i>Up above the world so high </i>
+
+                <em>Like a diamond in the sky</em>
+            </pre>
+        </p>
+    </body>
 </html>
